--- a/assets/css/imessage/messages.css
+++ b/assets/css/imessage/messages.css
@@ -1,27 +1,27 @@
-form.chat *{
-  transition:all .5s;
-  box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  -moz-box-sizing:border-box;
+form.chat * {
+  transition: all 0.5s;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 form.chat {
-  margin:0;
-  cursor:default;
-  position:absolute;
-  left:0;
-  right:0;
-  bottom:0;
-  top:0;
+  margin: 0;
+  cursor: default;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none;    /* Konqueror */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* IE/Edge */
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+  -khtml-user-select: none; /* Konqueror */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE/Edge */
   user-select: none;
 }
 
-form.chat span.spinner{
+form.chat span.spinner {
   -moz-animation: loading-bar 1s 1;
   -webkit-animation: loading-bar 1s 1;
   animation: loading-bar 1s 1;
@@ -29,37 +29,46 @@ form.chat span.spinner{
   height: 2px;
   background-color: #00e34d;
   transition: width 0.2s;
-  position:absolute;
-  top:0; left:0; right:0;
-  z-index:4
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 4;
 }
 
-form.chat .messages{
-  display:block;
+form.chat .messages {
+  display: block;
   overflow-x: hidden;
   overflow-y: scroll;
-  position:relative;
-  height:90%;
-  width:100%;
-  padding:2% 3%;
-  border-bottom:1px solid #ecf0f1;
+  position: relative;
+  height: 90%;
+  width: 100%;
+  padding: 2% 3%;
+  border-bottom: 1px solid #ecf0f1;
 }
 
-form.chat ::-webkit-scrollbar {width: 3px; height:1px;transition:all .5s;z-index:10;}
-form.chat ::-webkit-scrollbar-track {background-color: white;}
+form.chat ::-webkit-scrollbar {
+  width: 3px;
+  height: 1px;
+  transition: all 0.5s;
+  z-index: 10;
+}
+form.chat ::-webkit-scrollbar-track {
+  background-color: white;
+}
 form.chat ::-webkit-scrollbar-thumb {
   background-color: #bec4c8;
-  border-radius:3px;
+  border-radius: 3px;
 }
 
-form.chat .message{
-  display:block;
-  width:98%;
-  padding:0.5%;
+form.chat .message {
+  display: block;
+  width: 98%;
+  padding: 0.5%;
 }
 
-form.chat .message p{
-  margin:0;
+form.chat .message p {
+  margin: 0;
 }
 
 form.chat .myMessage,
@@ -69,12 +78,12 @@ form.chat .fromThem {
   margin-bottom: 20px;
 }
 
-form.chat .message:hover .myMessage{
+form.chat .message:hover .myMessage {
   -webkit-transform: translateX(-130px);
   transform: translateX(-130px);
 }
 
-form.chat .message:hover .fromThem{
+form.chat .message:hover .fromThem {
   -webkit-transform: translateX(130px);
   transform: translateX(130px);
 }
@@ -83,20 +92,21 @@ form.chat .message:hover date {
   opacity: 1;
 }
 
-form.chat .myMessage,.fromThem{
+form.chat .myMessage,
+.fromThem {
   position: relative;
   padding: 10px 20px;
   color: white;
   border-radius: 25px;
   clear: both;
-  font: 400 15px 'Open Sans', sans-serif;
+  font: 400 15px "Open Sans", sans-serif;
 }
 
 form.chat .myMessage {
   background: #00e34d;
-  color:white;
-  float:right;
-  clear:both;
+  color: white;
+  float: right;
+  clear: both;
   border-bottom-right-radius: 20px 0px\9;
 }
 
@@ -112,7 +122,7 @@ form.chat .myMessage:before {
   -webkit-transform: translate(0, -2px);
   transform: translate(0, -2px);
   border-bottom-left-radius: 15px 0px\9;
-  transform: translate(-1px, -2px)\9;
+  transform: translate(-1px, -2px) \9;
 }
 
 form.chat .myMessage:after {
@@ -130,10 +140,10 @@ form.chat .myMessage:after {
 }
 
 form.chat .fromThem {
-  background: #E5E5EA;
+  background: #e5e5ea;
   color: black;
   float: left;
-  clear:both;
+  clear: both;
   border-bottom-left-radius: 30px 0px\9;
 }
 form.chat .fromThem:before {
@@ -143,12 +153,12 @@ form.chat .fromThem:before {
   bottom: -2px;
   left: -7px;
   height: 19px;
-  border-left: 20px solid #E5E5EA;
+  border-left: 20px solid #e5e5ea;
   border-bottom-right-radius: 16px 14px;
   -webkit-transform: translate(0, -2px);
   transform: translate(0, -2px);
   border-bottom-right-radius: 15px 0px\9;
-  transform: translate(-1px, -2px)\9;
+  transform: translate(-1px, -2px) \9;
 }
 
 form.chat .fromThem:after {
@@ -166,14 +176,14 @@ form.chat .fromThem:after {
 }
 
 form.chat date {
-  position:absolute;
+  position: absolute;
   top: 10px;
-  font-size:14px;
-  white-space:nowrap;
-  vertical-align:middle;
+  font-size: 14px;
+  white-space: nowrap;
+  vertical-align: middle;
   color: #8b8b90;
   opacity: 0;
-  z-index:4;
+  z-index: 4;
 }
 
 form.chat .myMessage date {
@@ -184,53 +194,55 @@ form.chat .fromThem date {
   right: 105%;
 }
 
-form.chat input{
-  font: 400 13px 'Open Sans', sans-serif;
-  border:0;
-  padding:0 15px;
-  height:10%;
-  outline:0;
+form.chat input {
+  font: 400 13px "Open Sans", sans-serif;
+  border: 0;
+  padding: 0 15px;
+  height: 10%;
+  outline: 0;
 }
 
-form.chat input[type='text']{
-  width:73%;
-  float:left;
+form.chat input[type="text"] {
+  width: 73%;
+  float: left;
 }
 
-form.chat input[type='submit']{
-  width:23%;
-  background:transparent;
-  color:#00E34D;
-  font-weight:700;
-  text-align:right;
-  float:right;
+form.chat input[type="submit"] {
+  width: 23%;
+  background: transparent;
+  color: #00e34d;
+  font-weight: 700;
+  text-align: right;
+  float: right;
 }
 
-  form.chat .myMessage,form.chat .fromThem{
-    font-size:12px;
-  }
+form.chat .myMessage,
+form.chat .fromThem {
+  font-size: 12px;
+}
 
-  form.chat .message:hover .myMessage{
-    transform: translateY(18px);
-    -webkit-transform: translateY(18px);
-  }
+form.chat .message:hover .myMessage {
+  transform: translateY(18px);
+  -webkit-transform: translateY(18px);
+}
 
-  form.chat .message:hover .fromThem{
-    transform: translateY(18px);
-    -webkit-transform: translateY(18px);
-  }
+form.chat .message:hover .fromThem {
+  transform: translateY(18px);
+  -webkit-transform: translateY(18px);
+}
 
-  form.chat .myMessage date,form.chat .fromThem date {
-    top: -20px;
-    left:auto;
-    right:0;
-    font-size:12px;
-  }
+form.chat .myMessage date,
+form.chat .fromThem date {
+  top: -20px;
+  left: auto;
+  right: 0;
+  font-size: 12px;
+}
 
-  form.chat .myMessage,
-  form.chat .fromThem {
-    max-width: 90%;
-  }
+form.chat .myMessage,
+form.chat .fromThem {
+  max-width: 90%;
+}
 
 @-moz-keyframes loading-bar {
   0% {
@@ -266,32 +278,4 @@ form.chat input[type='submit']{
   100% {
     width: 100%;
   }
-}
-
-/* DEMO */
-.iphone{
-  width:300px;
-  height:609px;
-  background-image:url('http://www.adobewordpress.com/tasarim/images/iphone6.png');
-  background-size:100% 100%;
-  margin:0 auto;
-  position:relative;
-}
-
-.border{
-	position:absolute;
-	top:12.3%;right:7%;left:7%;bottom:12%;
-	overflow:hidden;
-}
-
-a.article{
-  position:fixed;
-  bottom:15px;left:15px;
-  display:table;
-  text-decoration:none;
-  color:white;
-  background-color:#00e34d;
-  padding: 10px 20px;
-  border-radius: 25px;
-  font: 400 15px 'Open Sans', sans-serif;
 }
