--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,10 +1,20 @@
+@import "./tailwind.scss";
+
 /* This file is for your main application css. */
 @import "../node_modules/nprogress/nprogress.css";
 
 // Phoenix
-@import "./phoenix.css";
-@import "./phx.scss";
+// @import "./phoenix.css";
+// @import "./phx.scss";
 
 // Messages
 @import "./imessage/indicator.css";
 @import "./imessage/messages.css";
+
+.messages-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  background: green;
+}
