--- a/lib/message_x_web/live/chat_live/index.html.leex
+++ b/lib/message_x_web/live/chat_live/index.html.leex
@@ -1,46 +1,77 @@
-<div class="relative flex w-full h-screen overflow-hidden antialiased bg-gray-200">
-  <div class="relative flex flex-col hidden h-full bg-white border-r border-gray-300 shadow-xl md:block transform transition-all duration-500 ease-in-out" style="width: 24rem">
-    <!-- Search -->
-    <div class="flex justify-between px-3 pt-1 text-white">
-      <div class="flex items-center w-full py-2">
-        <div class="relative flex items-center w-full pl-2 overflow-hidden text-gray-600 focus-within:text-gray-400">
-          <span class="absolute inset-y-0 left-0 flex items-center pl-4">
-            <button type="submit" class="p-1 focus:outline-none focus:shadow-none">
-              <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path fill-rule="nonzero" d="M9.5,3 C13.0898509,3 16,5.91014913 16,9.5 C16,10.9337106 15.5358211,12.2590065 14.7495478,13.3338028 L19.7071068,18.2928932 C20.0976311,18.6834175 20.0976311,19.3165825 19.7071068,19.7071068 C19.3466228,20.0675907 18.7793918,20.0953203 18.3871006,19.7902954 L18.2928932,19.7071068 L13.3338028,14.7495478 C12.2590065,15.5358211 10.9337106,16 9.5,16 C5.91014913,16 3,13.0898509 3,9.5 C3,5.91014913 5.91014913,3 9.5,3 Z M9.5,5 C7.01471863,5 5,7.01471863 5,9.5 C5,11.9852814 7.01471863,14 9.5,14 C11.9852814,14 14,11.9852814 14,9.5 C14,7.01471863 11.9852814,5 9.5,5 Z"/>
-              </svg>
-            </button>
-          </span>
-          <input type="search" name="q"
-                    class="w-full py-2 pl-12 text-sm text-white bg-gray-200 border border-transparent appearance-none rounded-tg focus:bg-white focus:outline-none focus:border-blue-500 focus:text-gray-900 focus:shadow-outline-blue" style="border-radius: 25px"
-                    placeholder="Search..." autocomplete="off">
+<div class="columns">
+  <div class="column is-3">
+    <section class="section">
+      <nav class="panel is-primary">
+        <p class="panel-heading"> Friends </p>
+        <div class="panel-block">
+          <p class="control has-icons-left">
+            <input class="input is-small" type="text" placeholder="Search">
+            <span class="icon is-small is-left">
+              <i class="fa fa-search"></i>
+            </span>
+          </p>
         </div>
-      </div>
-    </div>
-    <!-- Chats -->
-    <div class="relative mt-2 mb-4 overflow-x-hidden overflow-y-auto scrolling-touch lg:max-h-sm scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray">
-      Chats
-    </div>
+        <p class="panel-tabs">
+          <a class="is-active">All</a>
+          <a>Public</a>
+          <a>Private</a>
+          <a>Sources</a>
+          <a>Forks</a>
+        </p>
+        <a class="panel-block is-active">
+          <span class="panel-icon"> <i class="fa fa-book"></i> </span> bulma </a>
+        <a class="panel-block">
+          <span class="panel-icon"> <i class="fa fa-book"></i> </span> marksheet </a>
+        <a class="panel-block">
+          <span class="panel-icon"> <i class="fa fa-book"></i> </span> minireset.css </a>
+        <a class="panel-block">
+          <span class="panel-icon"> <i class="fa fa-book"></i> </span> jgthms.github.io </a>
+        <a class="panel-block">
+          <span class="panel-icon"> <i class="fa fa-code-branch"></i> </span> daniellowtw/infBoard </a>
+        <a class="panel-block">
+          <span class="panel-icon"> <i class="fa fa-code-branch"></i> </span> mojs </a>
+        <label class="panel-block">
+          <input type="checkbox"> Remember me </label>
+        <div class="panel-block">
+          <button class="button is-primary is-outlined is-fullwidth"> Reset all filters </button>
+        </div>
+      </nav>
+    </section>
   </div>
-  <!-- center -->
-  <div>
-    <div id="current-messages-#{@current_chat.id}"
-      class="imessage-container"
-      phx-update="append"
-      phx-hook="InfiniteScroll"
-      data-page="< % = @page %>">
-      Messages
-    </div>
+  <div class="column is-3">
+    <section class="section">
+      <%= live_component @socket, MessageXWeb.Components.ChatSidebar, id: "chat-sidebar-{@current_chat.id}", chats: @chats %>
+    </section>
   </div>
-  <!-- right -->
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <%= live_component @socket, MessageXWeb.ChatLive.SidebarComponent, id: "chat-sidebar-{@current_chat.id}", chats: @chats %>
-    </div>
-    <div class="col-md-8">
-      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.id}", messages: @current_messages, loading: @loading %>
-    </div>
+  <div class="column">
+    <section class="section">
+      <nav class="level">
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Messages</p>
+            <p class="title"><%= length(@current_chat.messages) %></p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Attachments</p>
+            <p class="title"><%= length(@current_chat.messages) %></p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Sentiment</p>
+            <p class="title"><%= length(@current_chat.messages) %></p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Chats</p>
+            <p class="title"><%= length(@chats) %></p>
+          </div>
+        </div>
+      </nav>
+      <%= live_component @socket, MessageXWeb.Components.ChatMessages, id: "chat-#{@current_chat.id}", messages: @current_messages, loading: @loading, chat: @current_chat %>
+    </section>
   </div>
 </div>
