--- a/lib/message_x_web/live/chat_live/sidebar_component.html.leex
+++ b/lib/message_x_web/live/chat_live/sidebar_component.html.leex
@@ -1,4 +1,44 @@
-
+<aside class="menu section">
+  <p class="menu-label"> Elements </p>
+  <ul class="menu-list">
+    <li>
+      <a href="#typography"> Typography </a>
+    </li>
+    <li>
+      <a href="#box"> Box </a>
+    </li>
+    <li>
+      <a href="#button"> Button </a>
+    </li>
+    <li>
+      <a href="#content"> Content </a>
+    </li>
+    <li>
+      <a href="#delete"> Delete </a>
+    </li>
+    <li>
+      <a href="#form"> Form </a>
+    </li>
+    <li>
+      <a href="#icon"> Icon </a>
+    </li>
+    <li>
+      <a href="#images"> Images </a>
+    </li>
+    <li>
+      <a href="#notifications"> Notifications </a>
+    </li>
+    <li>
+      <a href="#progress"> Progress bars </a>
+    </li>
+    <li>
+      <a href="#table"> Table </a>
+    </li>
+    <li>
+      <a href="#tag"> Tag </a>
+    </li>
+  </ul>
+</aside>
 <div id="window-controls">
   <button id="close">x</button>
   <button id="minimize">–</button>
