--- a/lib/message_x_web/live/message_live/index.html.leex
+++ b/lib/message_x_web/live/message_live/index.html.leex
@@ -1,11 +1,11 @@
-<div class="messages-container">
+<div class="imessages-container">
   <form class="chat">
     <%= if @loading do %>
       <span class="loading-spinner"></span>
     <% else %>
       <span></span>
     <% end %>
-    <div class="messages">
+    <div class="imessages">
       <%= for message <- @messages do %>
         <%= live_component @socket, MessageXWeb.MessageLive.Show, id: "message-#{message.id}", message: message %>
       <% end %>
