--- a/lib/message_x_web/live/message_live/index.html.leex
+++ b/lib/message_x_web/live/message_live/index.html.leex
@@ -7,7 +7,7 @@
     <% end %>
     <div class="imessages">
       <%= for message <- @messages do %>
-        <%= live_component @socket, MessageXWeb.MessageLive.Show, id: "message-#{message.id}", message: message %>
+        <%= live_component @socket, MessageXWeb.MessageLive.Show, id: "message-#{message.rowid}", message: message %>
       <% end %>
     </div>
     <input type="text" placeholder="Your message">
