--- a/lib/message_x_web/live/chat_live/index2.html.leex
+++ b/lib/message_x_web/live/chat_live/index2.html.leex
@@ -21,7 +21,7 @@
     <div class="relative mt-2 mb-4 overflow-x-hidden overflow-y-auto scrolling-touch lg:max-h-sm scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray">
       <ul class="flex flex-col inline-block w-full h-screen px-2 select-none">
         <%= for chat <- @chats do %>
-          <li id="chat-sidebar-item-#{chat.id}" class="flex flex-no-wrap items-center pr-3 text-black rounded-lg cursor-pointer mt-200 py-65 hover:bg-gray-200" style="padding-top: 0.65rem; padding-bottom: 0.65rem">
+          <li id="chat-sidebar-item-#{chat.rowid}" class="flex flex-no-wrap items-center pr-3 text-black rounded-lg cursor-pointer mt-200 py-65 hover:bg-gray-200" style="padding-top: 0.65rem; padding-bottom: 0.65rem">
             <div>
               <span><%= live_redirect "Show", to: Routes.chat_show_path(@socket, :show, chat) %></span>
             </div>
@@ -43,7 +43,7 @@
                 <div class="items-center flex-1 min-w-0">
                   <div class="flex justify-between mb-1">
                     <h2 class="text-sm font-semibold text-black">
-                      <%= chat.identifiers %>
+                      <%= chat.rowidentifiers %>
                       <%= chat.room_name %>
                       <%= chat.group_id %>
                       <%= chat.guid %>
@@ -94,18 +94,18 @@
 </div>
 <!-- center -->
 <div>
-  <div id="current-messages-#{@current_chat.id}"
+  <div id="current-messages-#{@current_chat.rowid}"
       class="imessage-container"
       phx-update="append"
       phx-hook="InfiniteScroll"
       data-page="< % = @page %>">
     <div id="imessages" class="imessage">
-      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.id}", messages: @current_messages %>
+      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.rowid}", messages: @current_messages %>
     </div>
   </div>
 </div>
 <!-- right -->
 </div>
 <div class="chat-sidebar-container">
-  <%= live_component @socket, MessageXWeb.ChatLive.SidebarComponent, id: "chat-sidebar-{chat.id}", chats: @chats %>
+  <%= live_component @socket, MessageXWeb.ChatLive.SidebarComponent, id: "chat-sidebar-{chat.rowid}", chats: @chats %>
 </div>
