--- a/lib/message_x_web/live/chat_live/show.html.leex
+++ b/lib/message_x_web/live/chat_live/show.html.leex
@@ -10,12 +10,12 @@
   </aside>
   <!-- MESSAGES -->
   <article id="messages">
-    <div id="current-messages-#{@current_chat.id}"
+    <div id="current-messages-#{@current_chat.rowid}"
       class="imessage-container"
       phx-update="append"
       phx-hook="InfiniteScroll"
       data-page="< % = @page %>">
-      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.id}", messages: @current_messages %>
+      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.rowid}", messages: @current_messages %>
     </div>
   </article>
   <!-- END MESSAGES -->
