--- a/lib/message_x_web/live/chat_live/sidebar_component.html.leex
+++ b/lib/message_x_web/live/chat_live/sidebar_component.html.leex
@@ -51,6 +51,6 @@
 </div>
 <ol>
   <%= for chat <- @chats do %>
-    <%= live_component @socket, MessageXWeb.ChatLive.SidebarItemComponent, id: "chat-sidebar-item-#{chat.id}", chat: chat %>
+    <%= live_component @socket, MessageXWeb.ChatLive.SidebarItemComponent, id: "chat-sidebar-item-#{chat.rowid}", chat: chat %>
   <% end %>
 </ol>
