--- a/lib/message_x_web/live/chat_live/index.html.leex
+++ b/lib/message_x_web/live/chat_live/index.html.leex
@@ -1,68 +1,9 @@
-<div class="columns">
-  <div class="column is-3">
-    <section id="chat-sidebar-section" class="section">
-      <nav class="panel is-primary">
-        <p class="panel-heading"> Friends </p>
-        <div class="panel-block">
-          <p class="control has-icons-left">
-            <input class="input" type="text" placeholder="Search">
-            <span class="icon is-left">
-              <i class="fa fa-search"></i>
-            </span>
-          </p>
-        </div>
-        <p class="panel-tabs">
-          <a class="is-active">All</a>
-          <a>Friends</a>
-          <a>Unknown Sender</a>
-        </p>
-        <div class="chat-sidebar-scrollable">
-          <%= for chat <- @chats.results,
-              class = (if @current_chat.rowid == chat.rowid, do: "is-active", else: "") do %>
-            <a class="panel-block <%= class%>">
-              <%= live_component(@socket, MessageXWeb.Components.ChatSidebarItem, id: chat.rowid, chat: chat) %>
-            </a>
-          <% end %>
-        </div>
-      </nav>
-    </section>
-  </div>
-  <!--
-  <div class="column is-3">
-    <section class="section">
-      <%=# live_component @socket, MessageXWeb.Components.ChatSidebar, id: "chat-sidebar-{@current_chat.rowid}", chats: @chats.results.results %>
-    </section>
-  </div>
-  -->
-  <div class="column">
-    <section id="chat-messages-section" class="section">
-      <nav class="level">
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Messages</p>
-            <p class="title"><%= length(@current_chat.messages) %></p>
-          </div>
-        </div>
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Attachments</p>
-            <p class="title"><%= length(@current_chat.messages) %></p>
-          </div>
-        </div>
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Sentiment</p>
-            <p class="title"><%= length(@current_chat.messages) %></p>
-          </div>
-        </div>
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Chats</p>
-            <p class="title"><%= length(@chats.results) %></p>
-          </div>
-        </div>
-      </nav>
-      <%= live_component @socket, MessageXWeb.Components.ChatMessages, id: "chat-#{@current_chat.rowid}", messages: @current_messages, loading: @loading, chat: @current_chat %>
-    </section>
-  </div>
-</div>
+
+<%= live_component(@socket, MessageXWeb.Scenes.Messages,
+  loading: @loading,
+  chats: @chats.results,
+  chats_meta: @chats,
+  current_messages: @current_messages.results,
+  messages_meta: @current_messages,
+  current_chat: @current_chat)
+%>
