--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -178,3 +178,7 @@ main.container {
     #03001e
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+.pagination-item {
+  display: inline;
+}
