--- a/lib/message_x_web/live/chat_live/show.html.leex
+++ b/lib/message_x_web/live/chat_live/show.html.leex
@@ -2,7 +2,7 @@
   loading: @loading,
   chats: @chats.results,
   chats_meta: @chats,
-  current_chat_messages: @current_chat_messages.results,
-  chat_messages_meta: @current_chat_messages,
+  current_messages: @current_messages.results,
+  messages_meta: @current_messages,
   current_chat: @current_chat)
 %>
