--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,7 +8,7 @@
 // @import "./phx.scss";
 
 // Messages
-// @import "./imessage/indicator.css";
+@import "./imessage/indicator.scss";
 @import "./imessage/messages.scss";
 
 // Styles
