--- a/assets/css/debug.scss
+++ b/assets/css/debug.scss
@@ -1,4 +1,13 @@
 pre {
   overflow-y: auto;
+  overflow-x: scroll;
+  width: 100%;
   max-height: 1000px;
+  max-width: 50vw;
+  clear: both;
+  // text-align: center;
+  padding: 6px;
+  margin: 12px;
+  background: #e9e9e9;
+  border: 1px solid grey;
 }
