--- a/lib/message_x_web/live/chat_live/index.html.leex
+++ b/lib/message_x_web/live/chat_live/index.html.leex
@@ -3,7 +3,7 @@
   loading: @loading,
   chats: @chats.results,
   chats_meta: @chats,
-  current_messages: @current_messages.results,
-  messages_meta: @current_messages,
+  messages: @messages.results,
+  messages_meta: @messages,
   current_chat: @current_chat)
 %>
