--- a/lib/message_x_web/live/chat_live/index2.html.leex
+++ b/lib/message_x_web/live/chat_live/index2.html.leex
@@ -100,7 +100,7 @@
       phx-hook="InfiniteScroll"
       data-page="< % = @page %>">
     <div id="imessages" class="imessage">
-      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.rowid}", messages: @current_messages %>
+      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.rowid}", messages: @messages %>
     </div>
   </div>
 </div>
