--- a/lib/message_x_web/live/chat_live/index3.html.leex
+++ b/lib/message_x_web/live/chat_live/index3.html.leex
@@ -40,7 +40,7 @@
       <%= live_component @socket, MessageXWeb.ChatLive.SidebarComponent, id: "chat-sidebar-{@current_chat.rowid}", chats: @chats %>
     </div>
     <div class="col-md-8">
-      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.rowid}", messages: @current_messages, loading: @loading %>
+      <%= live_component @socket, MessageXWeb.MessageLive.Index, id: "chat-#{@current_chat.rowid}", messages: @messages, loading: @loading %>
     </div>
   </div>
 </div>
